--- a/.github/workflows/build_pipeline.yml
+++ b/.github/workflows/build_pipeline.yml
@@ -27,9 +27,12 @@ jobs:
         node-version: 18
 
 
-    - name: Start app
-    - run: npm ci
+    - name: Setup modules
+      run: npm ci
+    
 
+    - name: Start app
+      run: npm run dev
 
     - name: Log in to the Container registry
       uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
